backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: backend
          image: 019394553470.dkr.ecr.us-east-1.amazonaws.com/sd5046-msa-backend:20
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
