mongodb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: app-argocd
  labels:
    name: mongo
spec:
  selector:
    name: mongo
  ports:
    - port: 27017
      protocol: TCP
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: app-argocd
spec:
  selector:
    matchLabels:
      name: mongo
  replicas: 1
  template:
    metadata:
      labels:
        name: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mongo
        image: mongo:7-jammy
        ports:
          - containerPort: 27017
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        volumeMounts:
            - name: data-volume
              mountPath: /data/db
      volumes:
        - name: data-volume
          emptyDir: {}
